# receipts

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  go.mod
.claude/commands/: receipts.md
.cursor/: mcp.json
.cursor/rules/: receipts.mdc
.gemini/commands/: receipts.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
adapters/: README.md
adapters/cli/: cli.go  cli_test.go  doc.go
adapters/mcp/: doc.go  server.go  server_test.go
adapters/precommit/: .pre-commit-hooks.yaml  doc.go  precommit_test.go
benchmark/: README.md  benchmark_test.go
benchmark/cases/: case-001.json  case-002.json  case-003.json  case-004.json  case-005.json  case-006.json  case-007.json  case-008.json  case-009.json  case-010.json  case-011.json  case-012.json  case-013.json  (+38 more)
cmd/: README.md
core/: README.md
docs/: ai-clients.md  demo.md  plain-english.md  report-format.md  verifier-protocol.md
examples/: .receipts.yaml  README.md  bad.py  good.py
llm/: README.md  annotate.go  annotate_test.go  doc.go  export_test.go  openai.go  provider.go  provider_test.go  router.go
protocol/: README.md  doc.go  report.v0.json  schema_test.go  verifier-protocol.v0.json  verifier_protocol_test.go
verifiers/: README.md
verifiers/python-symbols/: pyproject.toml
verifiers/python-symbols/receipts_python_symbols/: __init__.py  __main__.py  analyze.py  env.py  extract.py  introspect.py  rpc.py
verifiers/python-symbols/tests/: fixture_claims.py  test_analyze.py  test_extract.py  test_introspect.py  test_rpc.py
(+31 files in other folders)
