[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "receipts-python-symbols"
version = "0.1.0"
description = "Python symbol verifier plugin for Receipts"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["receipts_python_symbols*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
