[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "receipts-python-symbols"
version = "0.1.0"
description = "Python symbol verifier plugin for Receipts"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
# pandas/numpy are required by the acceptance tests in tests/test_analyze.py and
# tests/test_introspect.py, which assert against real, known API changes
# (e.g. pandas.DataFrame.append removed in 2.0) — not mockable without losing
# the point of those tests. Version-pinned to match the benchmark CI job.
dev = ["pytest>=7.0", "numpy>=1.26,<2", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["receipts_python_symbols*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
